Fix for the form on mobile revert back to original

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -505,7 +505,7 @@ dialog {
 .formcarry-container textarea,
 .formcarry-container select {
   margin-top: 4px;
-  width: 90%;
+  width: 100%;
   height: 42px;
   border: 1px solid var(--fc-border-color);
   color: var(--fc-normal-text-color);
@@ -519,7 +519,7 @@ dialog {
 
 .formcarry-container textarea {
   min-height: 188px;
-  max-width: 90%;
+  max-width: 100%;
   padding-top: 12px;
 }
 
